--- a/src/styles.css
+++ b/src/styles.css
@@ -198,7 +198,7 @@ body {
 */
 
 .danger {
-  color: #dd4b39;
+  color: #5D478B;
   display: inline;
 }
 
@@ -255,9 +255,9 @@ body {
 }
 
 .detail-active {
-  border-bottom: 2px solid #dd4b39;
+  border-bottom: 2px solid #5D478B;
 }
 
 .has-error-block {
-  color: #dd4b39;
+  color: #5D478B;
 }
